# safeagentguard

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_scenario.md
.github/workflows/: ci.yml
docker/: Dockerfile.agent
examples/: run_banking_test.py  run_healthcare_test.py  run_hr_test.py  sample_report.html
src/: __init__.py  cli.py  exceptions.py  logging_config.py  main.py  run_agent.py  sandbox.py  scoring.py
src/agents/: __init__.py  base.py  mock.py  openai.py
src/domains/: __init__.py  banking.py  base.py  healthcare.py  hr.py
src/reports/: __init__.py  generator.py
src/reports/templates/: report.html
tests/: __init__.py  conftest.py  test_cli.py  test_sandbox.py  test_scoring.py
tests/test_agents/: test_mock.py  test_openai.py
tests/test_domains/: __init__.py  test_all_domains.py  test_banking.py  test_healthcare.py  test_hr.py
tests/test_reports/: test_generator.py
